[CS] Fix locator for dynamic member key-path IUO unwrap

We need to be looking at the callee locator here
for the recorded IUO unwrap.

SR-15249